testsuite/tests/qualifieddo/should_fail/all.T
setTestOpts(only_ways(['normal']));

test('qdofail001', normal, compile_fail, ['-v0'])
test('qdofail002', normal, compile_fail, ['-v0'])
test('qdofail003', normal, compile_fail, ['-v0'])
test('qdofail004', normal, compile_fail, ['-v0'])
test('qdofail005', normal, compile_fail, ['-v0'])
